--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -48,6 +48,18 @@ echo "export https_proxy='$2'" >> /etc/profile.d/envvar.sh
 source /etc/profile.d/envvar.sh
 SCRIPT
 
+install_contiv = <<SCRIPT
+kubectl apply -f /shared/.contiv.yaml
+contiv_version=$(grep -m 1  "contiv/netplugin:" /shared/.contiv.yaml | awk -F ":" '{print $3}' | xargs)
+curl -L -O https://github.com/contiv/netplugin/releases/download/$contiv_version/netplugin-$contiv_version.tar.bz2
+tar xf netplugin-$contiv_version.tar.bz2 netctl
+rm -f netplugin-$contiv_version.tar.bz2
+chmod +x netctl
+mv netctl /usr/bin/
+kubectl get deployment/kube-dns -n kube-system -o json  > kube-dns.yaml
+kubectl delete deployment/kube-dns -n kube-system
+SCRIPT
+
 # method to read the cluster config file
 def read_cluster_config
   if ENV['VAGRANT_CWD']  then
@@ -245,19 +257,17 @@ Vagrant.configure(2) do |config|
           #copy the etc_hosts file we created
           sudo cp /shared/.etc_hosts /etc/hosts
           EOS
-        if ENV['VAGRANT_USE_KUBEADM'] then
-            c.vm.provision :shell, path: "../../install/k8s/cluster/bootstrap_centos.sh"
-            if  role == "master" then
-               # Install kubernetes on master
-               # With the latest 1.4.4 kube*, kubeadm hangs frequently while waiting for the control plane to be available.
-               # So using v1.4.1 as per https://github.com/kubernetes/kubernetes/issues/33729 
-              c.vm.provision :shell, path: "../../install/k8s/cluster/k8smaster_centos.sh", args:[token, member_info["contiv_control_ip"], "v1.4.1"]
-               # Now install contiv
-               c.vm.provision :shell, inline: "kubectl apply -f /shared/.contiv.yaml"
-            else
-               # Install kubernetes on nodes
-              c.vm.provision :shell, path: "../../install/k8s/cluster/k8sworker_centos.sh", args:[token, master_ip]
-            end # if
+        if ENV['VAGRANT_USE_KUBEADM']
+          c.vm.provision :shell, path: '../../install/k8s/cluster/bootstrap_centos.sh'
+          if role == 'master'
+            # Install kubernetes on master
+            c.vm.provision :shell, path: '../../install/k8s/cluster/k8smaster_centos.sh', args: [token, member_info['contiv_control_ip'], 'v1.4.1']
+            # Now install contiv
+            c.vm.provision :shell, inline: install_contiv
+          else
+            # Install kubernetes on nodes
+            c.vm.provision :shell, path: '../../install/k8s/cluster/k8sworker_centos.sh', args: [token, master_ip]
+          end # if
         end
       end # c
     end # member_info
