--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -145,7 +145,7 @@ Vagrant.configure(2) do |config|
   config.ssh.private_key_path = "./../../scripts/insecure_private_key"
   
   config.vm.synced_folder "./export", "/shared"
-  config.vm.synced_folder "./../../","/opt/gopath/src/github.com/contiv/netplugin"
+  config.vm.synced_folder "./../../../../../","/opt/gopath/src"
   config.vm.synced_folder "./../../bin","/opt/gopath/bin"
   cluster.each do |role, member_list|
     member_list.each do |member_info|
@@ -234,4 +234,3 @@ Vagrant.configure(2) do |config|
     end # member_info
   end #role
 end #config
-#
