--- a/vagrant/nomad-docker/Vagrantfile
+++ b/vagrant/nomad-docker/Vagrantfile
@@ -101,7 +101,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 	    config.vm.box = "contiv/centos71-netplugin"
     end
     config.vm.provider 'virtualbox' do |v|
-        v.linked_clone = true if Vagrant::VERSION =~ /^1.8/
+        v.linked_clone = true if Vagrant::VERSION >= "1.8"
     end
 
     num_nodes = 2
