--- a/vagrant/mesos-cni/Vagrantfile
+++ b/vagrant/mesos-cni/Vagrantfile
@@ -104,7 +104,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         config.vm.box = "contiv/mesos-ubuntu1504"
     end
     config.vm.provider 'virtualbox' do |v|
-        v.linked_clone = true if Vagrant::VERSION =~ /^1.8/
+        v.linked_clone = true if Vagrant::VERSION >= "1.8"
     end
 
     num_nodes = 2
