--- a/install/v2plugin/Dockerfile
+++ b/install/v2plugin/Dockerfile
@@ -1,26 +1,14 @@
-##
-#Copyright 2017 Cisco Systems Inc. All rights reserved.
-#
-#Licensed under the Apache License, Version 2.0 (the "License");
-#you may not use this file except in compliance with the License.
-#You may obtain a copy of the License at
-#http://www.apache.org/licenses/LICENSE-2.0
-#
-#Unless required by applicable law or agreed to in writing, software
-#distributed under the License is distributed on an "AS IS" BASIS,
-#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#See the License for the specific language governing permissions and
-#limitations under the License.
-##
-
 # Docker v2plugin container with OVS / netplugin / netmaster
 
-FROM alpine:3.6
+FROM alpine:3.5
 LABEL maintainer "Cisco Contiv (https://contiv.github.io)"
 
-RUN mkdir -p /run/docker/plugins /etc/openvswitch /var/log/contiv \
+RUN mkdir -p /run/docker/plugins /etc/openvswitch /var/run/contiv/log \
  && echo 'http://dl-cdn.alpinelinux.org/alpine/v3.4/main' >> /etc/apk/repositories \
- && apk --no-cache add openvswitch=2.5.0-r0 iptables ca-certificates openssl curl bash
+ && apk --no-cache add openvswitch=2.5.0-r0 iptables ca-certificates openssl curl \
+ && wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/andyshinn/alpine-pkg-glibc/master/sgerrand.rsa.pub \
+ && wget https://github.com/andyshinn/alpine-pkg-glibc/releases/download/2.23-r1/glibc-2.23-r1.apk \
+ && apk --no-cache add glibc-2.23-r1.apk
 
 COPY netplugin netmaster netctl startcontiv.sh /
 
