--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -12,6 +12,8 @@ master_ip = "192.168.2.10"
 
 http_proxy = ENV['HTTP_PROXY'] || ENV['http_proxy'] || ''
 https_proxy = ENV['HTTPS_PROXY'] || ENV['https_proxy'] || ''
+num_vm_cpus = (ENV['CONTIV_CPUS'] || 4).to_i
+vm_memory = (ENV['CONTIV_MEMORY'] || 2048).to_i
 
 # python -c 'import random; print "%0x.%0x" % (random.SystemRandom().getrandbits(3*8), random.SystemRandom().getrandbits(8*8))
 token = "d900e1.8a392798f13b33a4"
@@ -211,7 +213,8 @@ Vagrant.configure(2) do |config|
         c.vm.network :private_network, ip: member_info["contiv_network_ip"], virtualbox__intnet: network_name, auto_config: false
         c.vm.provider "virtualbox" do |v|
           customize(v)
-          v.memory = 2048
+          v.memory = vm_memory
+          v.cpus = num_vm_cpus
           v.customize ['modifyvm', :id, '--nicpromisc2', 'allow-all']
           v.customize ['modifyvm', :id, '--nicpromisc3', 'allow-all']
         end # v
