--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,15 @@
 # we want to get the git commit SHA but not all the binary repo data
 .git/objects/pack
 bin/
+**/*.pyc
 .vagrant
 vagrant/
 docs/
 scripts/gobgp
+# this is the dockerfile for binary compilation, other dockerfiles
+# may want archive artifacts, but this one does not
 *.tar
+**/*.tar.gz
 *.bz2
 # export from a docker container, no need to copy into any docker containers
 install/v2plugin/rootfs
