v2plugin check fwd_mode, update docs

--- a/install/v2plugin/config.template
+++ b/install/v2plugin/config.template
@@ -110,7 +110,7 @@
           "Settable": [
              "value"
           ],
-          "Value": "bridge"
+          "Value": ""
        }
     ],
     "mounts": [
